--- a/MJML/legal-rep.mjml
+++ b/MJML/legal-rep.mjml
@@ -52,7 +52,8 @@
 
         <mj-column width="100%">
           <mj-text mj-class="para">
-            <p>Dear Mr. Howard J. Young,</p>
+            <p>Dear Mr. Trey Andrews,</p>
+            <p>My apologies for clogging your inbox. We had a system issue.</p>
             <p>I hope you and your family are healthy and well. </p>
             <p> I am a principal in a venture to consolidate the Dental industry.   </p>
 
