--- a/MJML/boardmember.mjml
+++ b/MJML/boardmember.mjml
@@ -8,7 +8,6 @@
       <mj-class name="footer-text" font-family="Open Sans, Arial, sans-serif" color="#111111" font-size="10px" line-height="14px"></mj-class>
       <mj-class name="body-text" font-family="Open Sans, Arial, sans-serif" color="#111111" font-size="16px" line-height="26px" align="center"></mj-class>
       <mj-class name="headline-text" font-family="Big Caslon, Garamond, Times, serif" color="#111111" font-size="40px" line-height="36px" align="center" text-transform="uppercase"></mj-class>
-      
       <mj-class name="para" font-size="14px" font-family="Raleway" line-height="25px"></mj-class>
       <mj-class name="sig" text-align="left" font-family="Raleway" line-height="8px">
       </mj-class>
@@ -52,7 +51,7 @@
 
         <mj-column width="100%">
           <mj-text mj-class="para">
-            <p>Dear Mr. Jay P,</p>
+            <p>Dear Ms. Lori Smith,</p>
             <p>I hope you and your family are healthy and well. </p>
             <p> I am a principal in a venture to consolidate the Dental industry.   </p>
 
@@ -72,6 +71,8 @@
             <p>https://calendly.com/equitydental/mnap</p>
             
             <p>On the call, I’ll explain our plan, which will help you make an informed choice on whether we might be a fit.  </p>
+            
+            <p>PS. 2 national law firms agreed to work with us on a success fee basis i.e  90% discount on broken deals.   </p>
             <p>Thank you for taking the time to read my message. </p>
           </mj-text>
         </mj-column>
