--- a/MJML/boardmember.mjml
+++ b/MJML/boardmember.mjml
@@ -71,8 +71,9 @@
             <p>https://calendly.com/equitydental/mnap</p>
             
             <p>On the call, I’ll explain our plan, which will help you make an informed choice on whether we might be a fit.  </p>
-            
+
             <p>PS. 2 national law firms agreed to work with us on a success fee basis i.e  90% discount on broken deals.   </p>
+            <p>Current board members: https://eqdpi.com/cb/  </p>
             <p>Thank you for taking the time to read my message. </p>
           </mj-text>
         </mj-column>
