--- a/MJML/boardmember.mjml
+++ b/MJML/boardmember.mjml
@@ -44,14 +44,14 @@
 
       <mj-section padding="30px 0 20px">
         <mj-column>
-          <mj-image width="100px" src="https://www.equitydentalpartners.com/static/logo/l1-mail.png"></mj-image>
+          <mj-image width="100px" src="https://eqdpi.com/static/logo/l1-mail.png"></mj-image>
         </mj-column>
       </mj-section>
       <mj-section>
 
         <mj-column width="100%">
           <mj-text mj-class="para">
-            <p>Dear Ms. Lori Smith,</p>
+            <p>Dear Mr. Thomas McCaffrey,</p>
             <p>I hope you and your family are healthy and well. </p>
             <p> I am a principal in a venture to consolidate the Dental industry.   </p>
 
