new bank chairman files

--- a/MJML/Bank-Chairman.mjml
+++ b/MJML/Bank-Chairman.mjml
@@ -60,7 +60,7 @@
             
             <p> Respecting the reputations of our Board members and conducting our business accordingly will be a core operating principle.  </p>
             
-            <p>Time commitment: 1 hour/month for an initial few months, except when we get into an acquisition, all bets are off. </p>
+            <p>Time commitment: 15 minutes/ month. </p>
 
             <p>The intent is to guide the ship, not to actually row the boat.  </p>
            
@@ -68,7 +68,7 @@
             
             <p>If you agree, please use the following link to schedule a time for a quick chat as per your availability and I will send you a pdf with additional information about the venture. </p>
             
-            <p>https://calendly.com/equitydental/mnap</p>
+            <p>https://calendly.com/equitydental/bc</p>
             
             <p>On the call, I’ll explain our plan, which will help you make an informed choice on whether we might be a fit.  </p>
 
