--- a/MJML/Bank-Chairman.mjml
+++ b/MJML/Bank-Chairman.mjml
@@ -51,7 +51,7 @@
 
         <mj-column width="100%">
           <mj-text mj-class="para">
-            <p>Dear Mr. Jordan Hamburger,</p>
+            <p>Dear Mr. Chris Gorman,</p>
             <p>I hope you and your family are healthy and well. </p>
             <p> I am a principal in a venture to consolidate the Dental industry.   </p>
 
@@ -73,7 +73,7 @@
             <p>On the call, I’ll explain our plan, which will help you make an informed choice on whether we might be a fit.  </p>
 
             <p>PS. 2 national law firms agreed to work with us on a success fee basis i.e  90% discount on broken deals.   </p>
-            <p>Current board members: https://eqdpi.com/cb/  </p>
+            <p>Current board members: https://eqdpi.com/acla/  </p>
             <p>Thank you for taking the time to read my message. </p>
           </mj-text>
         </mj-column>
