--- a/MJML/boardmember-fol-Up.mjml
+++ b/MJML/boardmember-fol-Up.mjml
@@ -8,9 +8,10 @@
       <mj-class name="footer-text" font-family="Open Sans, Arial, sans-serif" color="#111111" font-size="10px" line-height="14px"></mj-class>
       <mj-class name="body-text" font-family="Open Sans, Arial, sans-serif" color="#111111" font-size="16px" line-height="26px" align="center"></mj-class>
       <mj-class name="headline-text" font-family="Big Caslon, Garamond, Times, serif" color="#111111" font-size="40px" line-height="36px" align="center" text-transform="uppercase"></mj-class>
-      
       <mj-class name="para" font-size="14px" font-family="Raleway" line-height="25px"></mj-class>
-      
+      <mj-class name="sig" text-align="left" font-family="Raleway" line-height="8px">
+      </mj-class>
+
     </mj-attributes>
     <mj-font name="Open Sans" href="http://fonts.googleapis.com/css?family=Open+Sans"></mj-font>
     
@@ -30,7 +31,7 @@
   <mj-body background-color="#ffffff">
     <mj-section padding="0px">
       <mj-column> 
-        <mj-text font-size="1px" align="left" color="#ffffff" line-height="1px" font-family="'Open Sans', 'Raleway', Arial, Verdana, sans-serif" padding="0px"><span class="preheader"> Non Executive Member Board of Director - 
+        <mj-text font-size="1px" align="left" color="#ffffff" line-height="1px" font-family="'Open Sans', 'Raleway', Arial, Verdana, sans-serif" padding="0px"><span class="preheader">  Non Executive Member Board of Director 
           </span></mj-text>
       </mj-column>
     </mj-section>
@@ -43,43 +44,59 @@
 
       <mj-section padding="30px 0 20px">
         <mj-column>
-          <mj-image width="100px" src="https://www.equitydentalpartners.com/static/logo/l1-mail.png"></mj-image>
+          <mj-image width="100px" src="https://eqdpi.com/static/logo/l1-mail.png"></mj-image>
         </mj-column>
       </mj-section>
       <mj-section>
 
         <mj-column width="100%">
           <mj-text mj-class="para">
-            <p>Dear Mr. Tom Califano,</p>
+            <p>Dear Mr. Paul F. Lawrence,</p>
             <p>I hope you and your family are healthy and well. </p>
+            
+            <p>I just wanted to touch base and be sure my message got to you. </p>
+
             <p> I am a principal in a venture to consolidate the Dental industry.   </p>
 
-            <p> We are assembling a world-class Non-Ex Board of Directors, which will be augmented with excellent legal and accounting representation.  
- </p>
+            <p> We are assembling a world-class Non-Ex Board of Directors, which will be augmented with excellent legal and accounting representation.  </p>
             <p> Founding Board members will be given equity and will never be asked to contribute capital.   </p>
             
             <p> Respecting the reputations of our Board members and conducting our business accordingly will be a core operating principle.  </p>
             
-            <p>Time commitment: 1 hour/month for an initial couple of months, except when we get into an acquisition, all bets are off. </p>
+            <p>Time commitment: 1 hour/month for an initial few months, except when we get into an acquisition, all bets are off. </p>
 
             <p>The intent is to guide the ship, not to actually row the boat.  </p>
            
             <p>It appears with your background, this might be a potential fit and worth discussing.</p>
             
-            <p> If you agree, please use the following link to schedule a time for us as per your availability & I will send you a pdf with additional information about the venture. </p>
-            
+            <p>If you agree, please use the following link to schedule a time for a quick chat as per your availability and I will send you a pdf with additional information about the venture. </p>
             
             <p>https://calendly.com/equitydental/mnap</p>
             
             <p>On the call, I’ll explain our plan, which will help you make an informed choice on whether we might be a fit.  </p>
+
+            <p>PS. 2 national law firms agreed to work with us on a success fee basis i.e  90% discount on broken deals.   </p>
+            <p>Current board members: https://eqdpi.com/cb/  </p>
             <p>Thank you for taking the time to read my message. </p>
           </mj-text>
         </mj-column>
+      </mj-section>
 
+       <mj-section>
+        <mj-column>
+          <mj-text mj-class="sig">
+            <p>Best regards, </p>
+            <p>Jay Parteek |  Principal | EquityDentalPartners</p>
+            <p>Web: Eqdpi.com </p>
+            <p>Linkedin: www.linkedin.com/in/jayeqd </p>
+            <p>Email- Jay@eqdpi.com </p>
+            <a href="(714)-606-7884" style="color: #111111;">C-(714)-606-7884</a>
+          </mj-text>
+        </mj-column>
 
       </mj-section>
+
       <mj-raw>&lt;!--[if !mso]&gt;&lt;\!--&gt;</mj-raw>
-   
    
       <mj-raw>&lt;\!--&lt;![endif]--&gt;</mj-raw>
       <mj-section padding="10px 0 5px">
@@ -93,7 +110,7 @@
     <mj-wrapper background-color="#f9f9f9" padding="40px 0 0">
       <mj-section background-color="#f9f9f9">
         <mj-column>
-          <mj-image src="https://www.equitydentalpartners.com/static/logo/header.png" width="600px"></mj-image>
+          <mj-image src="https://www.eqdpi.com/static/logo/header.png" width="600px"></mj-image>
         </mj-column>
       </mj-section>
       
@@ -111,7 +128,7 @@
       <mj-column>
         <mj-text mj-class="footer-text" align="center" padding="0 10px">
           <p style="Margin:0; padding-bottom:10px; font-size:10px; line-height:15px; Margin-bottom:10px; color:#111111; font-family: 'Open Sans', 'Raleway', Arial, Helvetica, sans-serif;"> 
-            <a href="http://www.eqdpi.com/" name="footer_equitys" style="color:#111111; text-decoration:underline;">www.equitydentalpartners.com</a>
+            <a href="http://www.eqdpi.com/" name="footer_equitys" style="color:#111111; text-decoration:underline;">www.eqdpi.com</a>
           </p>
            
           <p style="Margin:0; padding-bottom:10px; font-size:10px; line-height:15px; Margin-bottom:10px; color:#111111; font-family: 'Open Sans', 'Raleway', Arial, Helvetica, sans-serif;">
