updated mjml and html pages

--- a/MJML/boardmember.mjml
+++ b/MJML/boardmember.mjml
@@ -51,7 +51,7 @@
 
         <mj-column width="100%">
           <mj-text mj-class="para">
-            <p>Dear Mr. Steve Higginbotham,</p>
+            <p>Dear Mr. Stuart Kurlander,</p> 
             <p>I hope you and your family are healthy and well. </p>
             <p> I am a principal in a venture to consolidate the Dental industry.   </p>
 
@@ -76,8 +76,9 @@
             <p>Current board members: https://eqdpi.com/cb9/  </p>
 
             <p>Please note: The Big4 and top law firms allow their partners to join as non-executive board members. We already have those people. Why not ask, what do you have to lose?      
-I'd love to hear from you.   I'd love to hear from you.
-            </p>
+            I'd love to hear from you.   I'd love to hear from you.
+             </p>
+            
             <p>Thank you for taking the time to read my message. </p>
           </mj-text>
         </mj-column>
