--- a/MJML/legal-rep.mjml
+++ b/MJML/legal-rep.mjml
@@ -52,7 +52,7 @@
 
         <mj-column width="100%">
           <mj-text mj-class="para">
-            <p>Dear Ms. Lynn Sessions,</p>
+            <p>Dear Mr. Geoffrey C. Cockrell,</p>
             <p>I hope you and your family are healthy and well. </p>
             <p> I am a principal in a venture to consolidate the Dental industry.   </p>
 
