--- a/MJML/seller.mjml
+++ b/MJML/seller.mjml
@@ -1,6 +1,6 @@
 <mjml>
   <mj-head>
-    <mj-title>UGG Royale</mj-title>
+    <mj-title>Equity Dental Group</mj-title>
     <mj-attributes>
       <mj-image alt="" padding="0px"></mj-image>
       <mj-section padding="0px"></mj-section>
@@ -9,10 +9,10 @@
       <mj-class name="body-text" font-family="Open Sans, Arial, sans-serif" color="#111111" font-size="16px" line-height="26px" align="center"></mj-class>
       <mj-class name="headline-text" font-family="Big Caslon, Garamond, Times, serif" color="#111111" font-size="40px" line-height="36px" align="center" text-transform="uppercase"></mj-class>
       
-      <mj-class name="para" font-family="Raleway" line-height="20px"></mj-class>
-       <mj-class name="sig" text-align="left" font-family="Raleway" line-height="8px">
+      <mj-class name="para" font-size="14px" font-family="Raleway" line-height="25px"></mj-class>
+      <mj-class name="sig" text-align="left" font-family="Raleway" line-height="8px">
       </mj-class>
-      
+
     </mj-attributes>
     <mj-font name="Open Sans" href="http://fonts.googleapis.com/css?family=Open+Sans"></mj-font>
     
@@ -31,29 +31,36 @@
   </mj-head>
   <mj-body background-color="#ffffff">
     <mj-section padding="0px">
-      <mj-column>
-        <mj-text font-size="1px" align="left" color="#ffffff" line-height="1px" font-family="'Open Sans', 'Raleway', Arial, Verdana, sans-serif" padding="0px"><span class="preheader"> Joint Venture/ Getting Acquired opportunity with Equity Dental Partners. Please explore more by visiting the links at the bottom. 
+      <mj-column> 
+        <mj-text font-size="1px" align="left" color="#ffffff" line-height="1px" font-family="'Open Sans', 'Raleway', Arial, Verdana, sans-serif" padding="0px"><span class="preheader">  PARTNERSHIP OPPORTUNITY
           </span></mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#f9f9f9">
       <mj-column>
-        <mj-text mj-class="body-text" font-size="14px" line-height="26px" letter-spacing="2px" text-transform="uppercase"> Joint Venture/ Getting Acquired opportunity</mj-text>
+        <mj-text mj-class="body-text" font-size="14px" line-height="26px" letter-spacing="2px" text-transform="uppercase"> Partnership Opportunity</mj-text>
       </mj-column>
     </mj-section>
     <mj-wrapper background-color="#f9f9f9" padding="0px">
 
       <mj-section padding="30px 0 20px">
         <mj-column>
-          <mj-image width="100px" src="https://www.equitydentalpartners.com/static/logo/l1-mail.png"></mj-image>
+          <mj-image width="100px" src="https://www.eqdpi.com/static/logo/l1-mail.png"></mj-image>
         </mj-column>
       </mj-section>
       <mj-section>
 
         <mj-column width="100%">
           <mj-text mj-class="para">
-            <p>Dear Dr. Elahe Wissinger,</p>
-            <p>We are interested in acquiring your practice Embellir Med Spa located in Tucson, AZ. 
+             <p>Dear Dr. Michael Radell,</p>
+             <p> We are very impressed with the quality of the practice that the doctor and team have built. </p>
+
+      <p>We believe that we have the ability to help the owner continue to grow the practice and create additional value for the owner, employees and patients through several initiatives.</p>
+
+      <p>  We can create several different opportunities for you, so whether you plan on working for over 5 years, or planning for a exit within 3-5 years we can/will create much value for you.
+      </p>
+      
+            <p>We are interested in acquiring your practice Radell Michael H DDS located in 3900 Clark Rd, Sarasota, FL 34233.  Or you can help us close more acquisitions. 
   </p>
             <p> We are the buyers  (not business brokers) with adequate capital and financing, and we’re prepared to close very quickly in the right situation. 
 </p>
@@ -79,21 +86,13 @@
             
             <p>Thank you for taking the time to read my message. </p>
             <p></p>
+            
           </mj-text>
         </mj-column>
-
-
-      </mj-section>
-      <mj-raw>&lt;!--[if !mso]&gt;&lt;\!--&gt;</mj-raw>
-   
-   
-      <mj-raw>&lt;\!--&lt;![endif]--&gt;</mj-raw>
-      <mj-section padding="10px 0 5px">
-      
       </mj-section>
 
        <mj-section>
-        <mj-column>
+         <mj-column>
           <mj-text mj-class="sig">
             <p>Best regards, </p>
             <p>Jay Parteek </p>
@@ -107,6 +106,12 @@
 
       </mj-section>
 
+      <mj-raw>&lt;!--[if !mso]&gt;&lt;\!--&gt;</mj-raw>
+   
+      <mj-raw>&lt;\!--&lt;![endif]--&gt;</mj-raw>
+      <mj-section padding="10px 0 5px">
+      
+      </mj-section>
     
     </mj-wrapper>
     <mj-wrapper padding="0px">
@@ -115,7 +120,7 @@
     <mj-wrapper background-color="#f9f9f9" padding="40px 0 0">
       <mj-section background-color="#f9f9f9">
         <mj-column>
-          <mj-image src="https://www.equitydentalpartners.com/static/logo/header.png" width="600px"></mj-image>
+          <mj-image src="https://www.eqdpi.com/static/logo/header.png" width="600px"></mj-image>
         </mj-column>
       </mj-section>
       
@@ -133,7 +138,7 @@
       <mj-column>
         <mj-text mj-class="footer-text" align="center" padding="0 10px">
           <p style="Margin:0; padding-bottom:10px; font-size:10px; line-height:15px; Margin-bottom:10px; color:#111111; font-family: 'Open Sans', 'Raleway', Arial, Helvetica, sans-serif;"> 
-            <a href="http://www.ugg.com/" name="footer_ugghomepage" style="color:#111111; text-decoration:underline;">www.equitydentalpartners.com</a>
+            <a href="http://www.eqdpi.com/" name="footer_equitys" style="color:#111111; text-decoration:underline;">www.eqdpi.com</a>
           </p>
            
           <p style="Margin:0; padding-bottom:10px; font-size:10px; line-height:15px; Margin-bottom:10px; color:#111111; font-family: 'Open Sans', 'Raleway', Arial, Helvetica, sans-serif;">
@@ -142,15 +147,16 @@
               <br /> 1002 N Sacramento St, Orange, CA 92867
             </span>
             <br />
-            <a href="http://www.eqdpi.com/about" name="footer_privacy" style="color:#111111; text-decoration:underline;">
+            
+            <a href="http://www.eqdpi.com" name="footer_privacy" style="color:#111111;">
               <strong>About Us</strong>
             </a>&nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="http://www.eqdpi.com/partner" style="text-decoration:underline; color:#111111;">
+            <a href="http://www.eqdpi.com/partner" style="color:#111111;">
               <strong>Partnership</strong>
               
                </a>&nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="http://www.eqdpi.com/partner" style="text-decoration:underline; color:#111111;">
-              <strong>Other</strong>
+            <a href="http://www.eqdpi.com/solutions" style="color:#111111;">
+              <strong>Solutions</strong>
               
             </a>&nbsp;&nbsp;&nbsp;&nbsp;
            
