new seller page

--- a/MJML/seller.mjml
+++ b/MJML/seller.mjml
@@ -53,39 +53,41 @@
         <mj-column width="100%">
           <mj-text mj-class="para">
              <p>Dear Dr. Michael Radell,</p>
-             <p> We are very impressed with the quality of the practice that the doctor and team have built. </p>
+             <p> We are very impressed with the quality of the practice that you and your team have built.  </p>
 
-      <p>We believe that we have the ability to help the owner continue to grow the practice and create additional value for the owner, employees and patients through several initiatives.</p>
+      <p> We believe that we can help you grow the practice and create additional value for you, employees, and patients through several initiatives.
+</p>
 
-      <p>  We can create several different opportunities for you, so whether you plan on working for over 5 years, or planning for a exit within 3-5 years we can/will create much value for you.
+      <p>  We can create several different opportunities for you, so whether you plan to work for over five years or prepare for an exit within 3-5 years, we can/will create much value for you. 
       </p>
       
-            <p>We are interested in acquiring your practice Radell Michael H DDS located in 3900 Clark Rd, Sarasota, FL 34233.  Or you can help us close more acquisitions. 
+            <p>We are the buyers (not business brokers) with adequate capital and financing, and we’re prepared to close very quickly in the right situation. 
   </p>
-            <p> We are the buyers  (not business brokers) with adequate capital and financing, and we’re prepared to close very quickly in the right situation. 
+            
+            <p> If you have no intention of retiring, that’s great! You could have the opportunity to become a big part of what promises to be an excited and rewarding future. 
 </p>
 
    
-            <p> So, if you have no intention of retiring, that’s great!  You could have the opportunity to become a big part of what promises to be an excited and rewarding future. </p>
+            <p> You have our assurance that all matters will be held in the strictest confidence.  </p>
 
-            <p>You have our assurance that all matters will be held in the strictest confidence. </p>
 
-            <p>We also understand that any transaction must provide mutual benefits in order to be viable.  
+            <p>We also understand that any transaction must provide mutual benefits to be viable.   
 </p>
 
 
-<p>I’d love to discuss your business over a phone call.  </p>
+<p>I’d love to discuss your business over a phone call.   </p>
            
+
             <p>Please use the following Calendly link to schedule a time for us as per your availability. 
 .</p>
             
             <p>https://calendly.com/equity-dental/o </p>
             
             
-            <p>Please feel free to reach out to me anytime at : 714-606-7884</p>
+            <p>Please feel free to reach out to me anytime at 714-606-7884</p>
             
             <p>Thank you for taking the time to read my message. </p>
-            <p></p>
+           
             
           </mj-text>
         </mj-column>
