--- a/MJML/seller.mjml
+++ b/MJML/seller.mjml
@@ -1,6 +1,6 @@
 <mjml>
   <mj-head>
-    <mj-title>Equity Dental Group</mj-title>
+    <mj-title>Equity Dental Partners</mj-title>
     <mj-attributes>
       <mj-image alt="" padding="0px"></mj-image>
       <mj-section padding="0px"></mj-section>
@@ -72,6 +72,7 @@
             <p>We also understand that any transaction must provide mutual benefits to be viable.   
 </p>
 
+<p>Here is more information about us:  <a target="_blank" href="https://www.eqdpi.com/sellers">About Us</a> <p>
 
 <p>I’d love to discuss your business over a phone call.   </p>
            
@@ -80,6 +81,7 @@
 .</p>
             
             <p>https://calendly.com/equity-dental/o </p>
+            
             
             
             <p>Please feel free to reach out to me anytime at 714-606-7884</p>
