--- a/MJML/boardmember.mjml
+++ b/MJML/boardmember.mjml
@@ -51,7 +51,7 @@
 
         <mj-column width="100%">
           <mj-text mj-class="para">
-            <p>Dear Mr. Douglas Andrews,</p> 
+            <p>Dear Mr. Keith Newton,</p> 
             <p>I hope you and your family are healthy and well. </p>
             <p> I am a principal in a venture to consolidate the Dental industry.   </p>
 
@@ -75,9 +75,9 @@
             <p>PS. 2 national law firms agreed to work with us on a success fee basis i.e  90% discount on broken deals.   </p>
             <p>Current board members: https://eqdpi.com/cb9/  </p>
 
-            <p>Please note: The Big4 and top law firms allow their partners to join as non-executive board members. We already have those people. Why not ask, what do you have to lose?      
-            I'd love to hear from you.   I'd love to hear from you.
-             </p>
+            <p>Please note: The Big4 and top law firms allow their partners to join as non-executive board members. We already have those people. Why not ask, what do you have to lose? </p>
+             
+             <p>  I'd love to hear from you.  </p>
             
             <p>Thank you for taking the time to read my message. </p>
           </mj-text>
