--- a/MJML/legal-rep.mjml
+++ b/MJML/legal-rep.mjml
@@ -60,14 +60,12 @@
 
             <p> I do not know if your current work would pose a conflict, but if not, I would welcome having a discussion.  </p>
 
-            <p> We are interviewing firms to represent us in our acquisitions, and your experience in the Healthcare industry at firmname is why I am reaching out.  </p>
+            <p> We are interviewing firms to represent us in our acquisitions, and your experience in the Healthcare industry at firmname is the reason I am reaching out.  </p>
             
             <p> If you have an interest in learning more, I will forward a short summary, so you can make an informed decision. </p>
             
              <p> Thank you for taking the time to read my message.    </p>
-            
-            <p>P.S  Please feel free to forward my message to the appropriate person in your firm.  </p>
-            
+             
           </mj-text>
         </mj-column>
       </mj-section>
@@ -132,7 +130,7 @@
             <a href="http://www.eqdpi.com" name="footer_privacy" style="color:#111111;">
               <strong>About Us</strong>
             </a>&nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="http://www.eqdpi.com/partner" style="color:#111111;">
+            <a href="https://eqdpi.com/partnershipform/" style="color:#111111;">
               <strong>Partnership</strong>
               
                </a>&nbsp;&nbsp;|&nbsp;&nbsp;
