--- a/MJML/Bank-Chairman.mjml
+++ b/MJML/Bank-Chairman.mjml
@@ -51,7 +51,7 @@
 
         <mj-column width="100%">
           <mj-text mj-class="para">
-            <p>Dear Mr. Scot Lenoir,</p>
+            <p>Dear Mr. Craig Scheef,</p>
             <p>I hope you and your family are healthy and well. </p>
             <p> I am a principal in a venture to consolidate the Dental industry.   </p>
 
