--- a/MJML/seller-Old.mjml
+++ b/MJML/seller-Old.mjml
@@ -1,6 +1,6 @@
 <mjml>
   <mj-head>
-    <mj-title>Equity Dental Group</mj-title>
+    <mj-title>Equity Dental Partners</mj-title>
     <mj-attributes>
       <mj-image alt="" padding="0px"></mj-image>
       <mj-section padding="0px"></mj-section>
@@ -8,6 +8,7 @@
       <mj-class name="footer-text" font-family="Open Sans, Arial, sans-serif" color="#111111" font-size="10px" line-height="14px"></mj-class>
       <mj-class name="body-text" font-family="Open Sans, Arial, sans-serif" color="#111111" font-size="16px" line-height="26px" align="center"></mj-class>
       <mj-class name="headline-text" font-family="Big Caslon, Garamond, Times, serif" color="#111111" font-size="40px" line-height="36px" align="center" text-transform="uppercase"></mj-class>
+      
       <mj-class name="para" font-size="14px" font-family="Raleway" line-height="25px"></mj-class>
       <mj-class name="sig" text-align="left" font-family="Raleway" line-height="8px">
       </mj-class>
@@ -16,10 +17,8 @@
     <mj-font name="Open Sans" href="http://fonts.googleapis.com/css?family=Open+Sans"></mj-font>
     
     <mj-font name="ValeraRound" href="https://www.equitydentalpartners.com/static/fonts/VarelaRound-Regular.ttf"></mj-font>
-    
+  
     <mj-font name="Raleway" href="https://fonts.googleapis.com/css?family=Raleway"></mj-font>
-    
-    
     
     <mj-style inline="inline">.link-nostyle { color: inherit; text-decoration: none }; /* Apple specific Links */ .apple-link-black a { color:#111111 !important; text-decoration:none; } .apple-link-gray a { color:#999999 !important; text-decoration:none; } .apple-link-white a
       { color:#ffffff !important; text-decoration:none; } .apple-link-tan a { color: #aa6034 !important; text-decoration: none; } .apple-link-light-grey a { color: #c7c8ca; text-decoration: none; } .preheader {display:none !important; visibility:hidden;
@@ -31,61 +30,58 @@
   <mj-body background-color="#ffffff">
     <mj-section padding="0px">
       <mj-column> 
-        <mj-text font-size="1px" align="left" color="#ffffff" line-height="1px" font-family="'Open Sans', 'Raleway', Arial, Verdana, sans-serif" padding="0px"><span class="preheader">  Non Executive Member Board of Director 
+        <mj-text font-size="1px" align="left" color="#ffffff" line-height="1px" font-family="'Open Sans', 'Raleway', Arial, Verdana, sans-serif" padding="0px"><span class="preheader">  PARTNERSHIP OPPORTUNITY
           </span></mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#f9f9f9">
       <mj-column>
-        <mj-text mj-class="body-text" font-size="14px" line-height="26px" letter-spacing="2px" text-transform="uppercase"> Non Executive Member Board of Directors</mj-text>
+        <mj-text mj-class="body-text" font-size="14px" line-height="26px" letter-spacing="2px" text-transform="uppercase"> Partnership Opportunity</mj-text>
       </mj-column>
     </mj-section>
     <mj-wrapper background-color="#f9f9f9" padding="0px">
 
       <mj-section padding="30px 0 20px">
         <mj-column>
-          <mj-image width="100px" src="https://eqdpi.com/static/logo/l1-mail.png"></mj-image>
+          <mj-image width="100px" src="https://www.eqdpi.com/static/logo/l1-mail.png"></mj-image>
         </mj-column>
       </mj-section>
       <mj-section>
 
         <mj-column width="100%">
           <mj-text mj-class="para">
-            <p>Dear Mr. Timothy Matney,</p> 
-            <p>I hope you and your family are healthy and well. </p>
-            <p> I am a principal in a venture to consolidate the Dental industry.   </p>
-            
-            <p> We are assembling a world-class Non-Ex Board of Directors, which are augmented with excellent legal and accounting representation.  </p>
-            <p> Founding Board members will be given equity and will never be asked to contribute capital.   </p>
-            
-            <p> Respecting the reputations of our Board members and conducting our business accordingly will be a core operating principle.  </p>
-            
-            <p>Time commitment: 1 hour/month for an initial few months, except when we get into an acquisition, all bets are off. </p>
+             <p>Dear Dr. Michael Radell,</p>
+             <p> We are very impressed with the quality of the practice that you and your team have built.  </p>
 
-            <p>The intent is to guide the ship, not to actually row the boat.  </p>
-           
-            <p>It appears with your background, this might be a potential fit and worth discussing.</p>
-            
-            <p>If you agree, please use the following link to schedule a time for a quick chat as per your availability and I will send you a pdf with additional information about the venture. </p>
-            
-            <p>https://calendly.com/equitydental/mnap</p>
-            
-            <p>On the call, I’ll explain our plan, which will help you make an informed choice on whether we might be a fit.  </p>
+             <p> We are in the business of helping firms such as yours navigate challenges including operations, environmental regulatory constraints, policy and procedure optimization, unforeseen market shifts while maintaining and expanding customer relationships. </p>
+             
 
-            <p>PS. 2 national law firms agreed to work with us on a success fee basis i.e  90% discount on broken deals.   </p>
-            <p>Current board members: https://eqdpi.com/cb9/  </p>
-
-          
+      <p>  We can create several different opportunities for you, so whether you plan to work for over five years or prepare for an exit within 3-5 years, we can/will create much value for you. 
+      </p>
+      
+            <p>We are in the market to acquire established dental practices like yours in a unique way. 
+  </p>
+            
+            <p> We are an experienced governance team of 6 with big corporation and small business exposure in the Dental Industry. We specialize in adding value, with a strong board of Non-Executive and Executive Directors across Finance, Banking, Accounting and dental industry across the nation. 
+</p>
+<p> We have all the skills necessary to take your business to the next level and we are not business brokers nor acting on behalf of investors.  </p>
+<p>If you are still reading this and any of the above is relevant, I would be happy to schedule a discussion to further explain who we are and our operating principles so we both may ascertain if this is a right fit. </p>
+<p>There is no risk on your end by getting in touch to satisfy your curiosity and letting the two of us know if this is worth pursuing further. All discussions will be held in strict confidence.  </p>
+<p>Here is more information about us::  <a target="_blank" href="https://www.eqdpi.com/sellers">About Us</a> <p>
+<p>I’d love to discuss your business over a phone call.   </p>
             <p>Thank you for taking the time to read my message. </p>
+     
+            
           </mj-text>
         </mj-column>
       </mj-section>
 
        <mj-section>
-        <mj-column>
+         <mj-column>
           <mj-text mj-class="sig">
             <p>Best regards, </p>
-            <p>Jay Parteek |  Principal | EquityDentalPartners</p>
+            <p>Jay Parteek </p>
+            <p>Principal </p>
             <p>Web: Eqdpi.com </p>
             <p>Linkedin: www.linkedin.com/in/jayeqd </p>
             <p>Email- Jay@eqdpi.com </p>
@@ -136,9 +132,7 @@
               <br /> 1002 N Sacramento St, Orange, CA 92867
             </span>
             <br />
-            <a href="https://eqdpi.com/cb" name="footer_privacy" style="color:#111111;">
-              <strong>Current Board</strong>
-            </a>&nbsp;&nbsp;|&nbsp;&nbsp;
+            
             <a href="http://www.eqdpi.com" name="footer_privacy" style="color:#111111;">
               <strong>About Us</strong>
             </a>&nbsp;&nbsp;|&nbsp;&nbsp;
