--- a/MJML/Bank-Chairman.mjml
+++ b/MJML/Bank-Chairman.mjml
@@ -51,7 +51,7 @@
 
         <mj-column width="100%">
           <mj-text mj-class="para">
-            <p>Dear Mr. Craig Scheef,</p>
+            <p>Dear Mr. Kevin Muskat,</p>
             <p>I hope you and your family are healthy and well. </p>
             <p> I am a principal in a venture to consolidate the Dental industry.   </p>
 
@@ -74,6 +74,7 @@
 
             <p>PS. 2 national law firms agreed to work with us on a success fee basis i.e  90% discount on broken deals.   </p>
             <p>Current board members: https://eqdpi.com/acla/  </p>
+            <p>Collectively we have experience of doing over $300 Billion ( EV value) in M&A transactions. </p>
             <p>Thank you for taking the time to read my message. </p>
           </mj-text>
         </mj-column>
