--- a/MJML/boardmember.mjml
+++ b/MJML/boardmember.mjml
@@ -51,7 +51,7 @@
 
         <mj-column width="100%">
           <mj-text mj-class="para">
-            <p>Dear Mr. Timothy Matney,</p> 
+            <p>Dear Mr. William Curtin,</p> 
             <p>I hope you and your family are healthy and well. </p>
             <p> I am a principal in a venture to consolidate the Dental industry.   </p>
             
@@ -60,7 +60,7 @@
             
             <p> Respecting the reputations of our Board members and conducting our business accordingly will be a core operating principle.  </p>
             
-            <p>Time commitment: 1 hour/month for an initial few months, except when we get into an acquisition, all bets are off. </p>
+            <p>Time commitment: 1-4 hour/month for an initial few months, except when we get into an acquisition, all bets are off. </p>
 
             <p>The intent is to guide the ship, not to actually row the boat.  </p>
            
@@ -72,7 +72,7 @@
             
             <p>On the call, I’ll explain our plan, which will help you make an informed choice on whether we might be a fit.  </p>
 
-            <p>PS. 2 national law firms agreed to work with us on a success fee basis i.e  90% discount on broken deals.   </p>
+            <p>PS. 2 national law firms proposed to work with us on a success fee basis i.e  90% discount on broken deals.   </p>
             <p>Current board members: https://eqdpi.com/cb9/  </p>
 
           
@@ -136,13 +136,13 @@
               <br /> 1002 N Sacramento St, Orange, CA 92867
             </span>
             <br />
-            <a href="https://eqdpi.com/cb" name="footer_privacy" style="color:#111111;">
+            <a href="https://eqdpi.com/cb9" name="footer_privacy" style="color:#111111;">
               <strong>Current Board</strong>
             </a>&nbsp;&nbsp;|&nbsp;&nbsp;
             <a href="http://www.eqdpi.com" name="footer_privacy" style="color:#111111;">
               <strong>About Us</strong>
             </a>&nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="http://www.eqdpi.com/partner" style="color:#111111;">
+            <a href="http://www.eqdpi.com/partnership" style="color:#111111;">
               <strong>Partnership</strong>
               
                </a>&nbsp;&nbsp;|&nbsp;&nbsp;
