--- a/MJML/legal-rep.mjml
+++ b/MJML/legal-rep.mjml
@@ -52,7 +52,7 @@
 
         <mj-column width="100%">
           <mj-text mj-class="para">
-            <p>Dear Mr. Frank Carsonie,</p>
+            <p>Dear Mr. David E. Dahlquist,</p>
 
             <p> I am a principal and leading a team in a venture to consolidate the Dental industry. </p>
             
