--- a/MJML/boardmember.mjml
+++ b/MJML/boardmember.mjml
@@ -51,22 +51,23 @@
 
         <mj-column width="100%">
           <mj-text mj-class="para">
-            <p>Dear Mr. William Curtin,</p> 
+            <p>Dear Mr. Scotte Hudsmith,</p> 
             <p>I hope you and your family are healthy and well. </p>
             <p> I am a principal in a venture to consolidate the Dental industry.   </p>
             
-            <p> We are assembling a world-class Non-Ex Board of Directors, which are augmented with excellent legal and accounting representation.  </p>
-            <p> Founding Board members will be given equity and will never be asked to contribute capital.   </p>
+            <p> We have assembled a world-class Non-Ex Board of Directors, which is augmented with excellent legal and accounting representation.  </p>
+           
+            <p> Founding Board members are given equity and will never be asked to contribute capital.   </p>
             
             <p> Respecting the reputations of our Board members and conducting our business accordingly will be a core operating principle.  </p>
             
-            <p>Time commitment: 1-4 hour/month for an initial few months, except when we get into an acquisition, all bets are off. </p>
+            <p>Time commitment: 1 - 3 hours/week, except when we get into an acquisition, all bets are off. </p>
 
             <p>The intent is to guide the ship, not to actually row the boat.  </p>
            
             <p>It appears with your background, this might be a potential fit and worth discussing.</p>
             
-            <p>If you agree, please use the following link to schedule a time for a quick chat as per your availability and I will send you a pdf with additional information about the venture. </p>
+            <p>If you agree, please use the following link to schedule a time for a quick chat, and I will send you a pdf with additional information about the venture. </p>
             
             <p>https://calendly.com/equitydental/mnap</p>
             
@@ -75,7 +76,6 @@
             <p>PS. 2 national law firms proposed to work with us on a success fee basis i.e  90% discount on broken deals.   </p>
             <p>Current board members: https://eqdpi.com/cb9/  </p>
 
-          
             <p>Thank you for taking the time to read my message. </p>
           </mj-text>
         </mj-column>
