--- a/MJML/boardmember-Bruce.mjml
+++ b/MJML/boardmember-Bruce.mjml
@@ -8,6 +8,7 @@
       <mj-class name="footer-text" font-family="Open Sans, Arial, sans-serif" color="#111111" font-size="10px" line-height="14px"></mj-class>
       <mj-class name="body-text" font-family="Open Sans, Arial, sans-serif" color="#111111" font-size="16px" line-height="26px" align="center"></mj-class>
       <mj-class name="headline-text" font-family="Big Caslon, Garamond, Times, serif" color="#111111" font-size="40px" line-height="36px" align="center" text-transform="uppercase"></mj-class>
+      
       <mj-class name="para" font-size="14px" font-family="Raleway" line-height="25px"></mj-class>
       <mj-class name="sig" text-align="left" font-family="Raleway" line-height="8px">
       </mj-class>
@@ -31,55 +32,57 @@
   <mj-body background-color="#ffffff">
     <mj-section padding="0px">
       <mj-column> 
-        <mj-text font-size="1px" align="left" color="#ffffff" line-height="1px" font-family="'Open Sans', 'Raleway', Arial, Verdana, sans-serif" padding="0px"><span class="preheader">  Non Executive Member Board of Director 
+        <mj-text font-size="1px" align="left" color="#ffffff" line-height="1px" font-family="'Open Sans', 'Raleway', Arial, Verdana, sans-serif" padding="0px"><span class="preheader">  LEGAL REPRESENATION OPPORTUNITY
           </span></mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#f9f9f9">
       <mj-column>
-        <mj-text mj-class="body-text" font-size="14px" line-height="26px" letter-spacing="2px" text-transform="uppercase"> Non Executive Member Board of Directors</mj-text>
+        <mj-text mj-class="body-text" font-size="14px" line-height="26px" letter-spacing="2px" text-transform="uppercase"> Legal Represenation Opportunity</mj-text>
       </mj-column>
     </mj-section>
     <mj-wrapper background-color="#f9f9f9" padding="0px">
 
       <mj-section padding="30px 0 20px">
         <mj-column>
-          <mj-image width="100px" src="https://eqdpi.com/static/logo/l1-mail.png"></mj-image>
+          <mj-image width="100px" src="https://www.eqdpi.com/static/logo/l1-mail.png"></mj-image>
         </mj-column>
       </mj-section>
       <mj-section>
 
         <mj-column width="100%">
           <mj-text mj-class="para">
-            <p>Dear Mr. Doug Meier,</p>  
-            <p>I hope you and your family are healthy and well. </p>
-            <p> I am a principal in a venture to consolidate the Dental industry.   </p>
+            <p>Dear Mr. David E. Dahlquist,</p>
+
+            <p> I am a principal and leading a team in a venture to consolidate the Dental industry. </p>
             
-            <p> We have assembled a world-class Non-Ex Board of Directors, which is augmented with excellent legal and accounting representation.  </p>
-           
+            <p>We have assembled a world-class Non-Ex Board of Directors. Our total transactions experience has ranged in excess of $300 Billion 'ev'. </p>
+            
+            <p>  We are augmented with excellent legal and accounting representation. ( They offered us 80% discount on broken deals )</p>
+
             <p> Founding Board members are given equity and will never be asked to contribute capital.   </p>
             
             <p> Respecting the reputations of our Board members and conducting our business accordingly will be a core operating principle.  </p>
             
-            <p>Time commitment: 1 - 3 hours/week, except when we get into an acquisition, all bets are off. </p>
+            <p>Time commitment: 1 - 5 hours/week, except when we get into an acquisition, all bets are off. </p>
 
             <p>The intent is to guide the ship, not to actually row the boat.  </p>
            
             <p>It appears with your background, this might be a potential fit and worth discussing.</p>
             
-            <p>If you agree, please use the following link to schedule a time for a quick chat, and I will send you a pdf with additional information about the venture. </p>
-            
+         
+
+            <p> I do not know if your current work would pose a conflict, but if not, I would welcome having a discussion.  </p>
+           
+            <p> If you have an interest in learning more, please use the following link to schedule a time for a quick chat, and I will send you a pdf with additional information about the venture. </p>
+              
             <p>https://calendly.com/equitydental/mnap</p>
             
             <p>On the call, I’ll explain our plan, which will help you make an informed choice on whether we might be a fit.  </p>
 
-            <p>PS. 2 national law firms proposed to work with us on a success fee basis i.e  90% discount on broken deals.   </p>
-            <p>We have rejected several deals and we interview a new seller every week.  </p>
-            
 
-            <p>Current board members: https://eqdpi.com/cb9/  </p>
-
-            <p>Thank you for taking the time to read my message. </p>
+            <p> Thank you for taking the time to read my message.    </p>
+             
           </mj-text>
         </mj-column>
       </mj-section>
@@ -88,10 +91,9 @@
         <mj-column>
           <mj-text mj-class="sig">
             <p>Best regards, </p>
-            <p>Jay Parteek |  Principal | EquityDentalPartners</p>
-            <p>Web: Eqdpi.com </p>
+            <p>Jay Parteek </p>
+            <p>Principal | EquitydentalPartners </p>
             <p>Linkedin: www.linkedin.com/in/jayeqd </p>
-            <p>Email- Jay@eqdpi.com </p>
             <a href="(714)-606-7884" style="color: #111111;">C-(714)-606-7884</a>
           </mj-text>
         </mj-column>
@@ -136,16 +138,16 @@
           <p style="Margin:0; padding-bottom:10px; font-size:10px; line-height:15px; Margin-bottom:10px; color:#111111; font-family: 'Open Sans', 'Raleway', Arial, Helvetica, sans-serif;">
             <span style="color:#111111 !important; text-decoration:none;">
               <strong>1.714.606.7884</strong>
-              <br /> 1002 N Sacramento St, Orange, CA 92867
+              <!-- <br /> 1002 N Sacramento St, Orange, CA 92867 -->
             </span>
             <br />
-            <a href="https://eqdpi.com/cb9" name="footer_privacy" style="color:#111111;">
+            <!-- <a href="https://eqdpi.com/cb" name="footer_privacy" style="color:#111111;">
               <strong>Current Board</strong>
-            </a>&nbsp;&nbsp;|&nbsp;&nbsp;
+            </a>&nbsp;&nbsp;|&nbsp;&nbsp; -->
             <a href="http://www.eqdpi.com" name="footer_privacy" style="color:#111111;">
               <strong>About Us</strong>
             </a>&nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="http://www.eqdpi.com/partnership" style="color:#111111;">
+            <a href="https://eqdpi.com/partnershipform/" style="color:#111111;">
               <strong>Partnership</strong>
               
                </a>&nbsp;&nbsp;|&nbsp;&nbsp;
